fix(grid): fix scrollbar start background

--- a/projects/igniteui-angular/core/src/core/styles/components/grid/_grid-theme.scss
+++ b/projects/igniteui-angular/core/src/core/styles/components/grid/_grid-theme.scss
@@ -857,7 +857,7 @@
     }
 
     %grid-tbody-scrollbar-start {
-        background: var-get($theme, 'header-background');
+        background: var-get($theme, 'content-background');
     }
 
     %grid-tbody-scrollbar-main {
